--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reverse/array": "^1.7.3",
     "@reverse/random": "^1.0.12",
     "antd": "^4.1.0",
+    "classnames": "^2.2.6",
     "fullstack-system": "^2.8.2",
     "node-fetch": "^2.6.0",
     "react": "^16.8.6",
@@ -22,6 +23,7 @@
     "react-zoom-pan-pinch": "^1.6.1"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/node-fetch": "^2.5.5",
     "@types/react-router-dom": "^5.1.3",
     "core-js": "^2.6.11",
