--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reverse/array": "^1.7.3",
     "@reverse/random": "^1.0.12",
     "antd": "^4.1.0",
+    "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "fullstack-system": "^2.8.2",
     "node-fetch": "^2.6.0",
